syntax = "proto3";
option go_package = "../pb";

message SpendNote {
    bytes commitment                 = 1;
    uint32 key_index                 = 2;
    bytes scriptHash                 = 3;
    uint64 amount                    = 4;
    bytes asset_ID                   = 5;
    bytes state                      = 6;
    bytes salt                       = 7;
    uint64 acc_index                 = 8;
    bool watch_only                  = 9;
    UnlockingScript unlocking_script = 10;
}

message WalletTransaction {
    bytes txid    = 1;
    uint64 amtIn  = 2;
    uint64 amtOut = 3;
}

message AddrInfo {
    string addr                      = 1;
    UnlockingScript unlocking_script = 2;
    bytes view_priv_key              = 3;
    uint32 key_index                 = 4;
    bool watch_only                  = 5;
}

message UnlockingScript {
    bytes script_commitment      = 1;
    repeated bytes script_params = 2;
}